Fix test 13 and add test 14